fix some code warnings; use Nullable as parameters instead of optional, added @Override, removed duplicated javadocs